[package]
name = "chatapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["tls", "json"] }
actix-rt = "2.2.0"
actix-web = "4.0.0-beta.8"
actix-cors = "0.5.4"


[dev-dependencies]
rand = "0.8.4"

